--- a/.github/workflows/main_strapi-demo-12345.yml
+++ b/.github/workflows/main_strapi-demo-12345.yml
@@ -23,6 +23,7 @@ jobs:
 
       - name: npm install, build, and test
         run: |
+          cd my-project
           npm install
           npm run build --if-present
           npm run test --if-present
